Copy department failed to spellcheck

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 
   <h1 class="page-heading">Watch this space!</h1>
   
-  <p>This website is still under sconstruction, but you can check us out on <a href="https://www.facebook.com/thecandidcanine">Facebook</a> in the mean time!</p>
+  <p>This website is still under construction, but you can check us out on <a href="https://www.facebook.com/thecandidcanine">Facebook</a> in the mean time!</p>
 
 </div>
