testing to see that I can change the website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Watch this space!</h1>
-  
+  <h1 class="page-heading">Watch this space! Hello, World.</h1>
+
   <p>This website is still under construction, but you can check us out on <a href="https://www.facebook.com/thecandidcanine">Facebook</a> in the mean time!</p>
 
 </div>
