front page copy

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Watch this space!</h1>
+  <h1 class="page-heading">Dog Training / Behavioral Consultation</h1>
 
-  <p>This website is still under construction, but you can check us out on <a href="https://www.facebook.com/thecandidcanine">Facebook</a> in the mean time!</p>
+
+<ul>
+    <li>Do you have a new puppy and need help with chewing, puppy-proofing and housetraining?</li>
+    <li>Would you like to be able to walk or run with your dog and not feel like your arm is being pulled off?</li>
+    <li>Do you think it would great to have your pup perform silly and endearing tricks?</li>
+    <li>Just want to solidify your dog’s obedience and loose-leash walking skills?</li>
+</ul>
+
+<p>If so, you're in the right place!</p>
+
+<p>At The Candid Canine, I'm here to teach you everything you need to know to train your dog for the rest of its life. I believe that teaching dog owners to work with their animals through positive techniques strengthens the bond between family and pet, and creates an environment in which the dog will continue to learn and improve long after my sessions with you have been completed.</p>
+
+<p>Located out of Cambridge, I come to your home for all consultations and training sessions. This insures that your dog will be as comfortable and focused as possible in a familiar environment in order to optimize our session time.</p>
 
 </div>
 
