front page copy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <h1 class="page-heading">Dog Training / Behavioral Consultation</h1>
 
 
-<ul>
+<ul class="hook">
     <li>Do you have a new puppy and need help with chewing, puppy-proofing and housetraining?</li>
     <li>Would you like to be able to walk or run with your dog and not feel like your arm is being pulled off?</li>
     <li>Do you think it would great to have your pup perform silly and endearing tricks?</li>
