adding callout, tagline, and adjusting site description

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@ layout: default
 
 </div>
 
+<h2>Email us to set up a consultation for your dog today! <a href="mailto:{{ site.email }}">{{ site.email }}</a></h2>
+
 {% include training.html %}
 
